manifests/02-argo-rollout/k8s/05-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: myapp
  namespace: 02-rollout-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: myapp
        image: myapp:v1 # change to v2 and apply to rollout.
        ports:
        - containerPort: 8000
  strategy:
    canary:
      stableService: myapp-stable
      canaryService: myapp-canary
      trafficRouting:
        istio:
          virtualServices:
          - name: myapp
            routes:
            - primary               # must match the name in VirtualService's http.route.name
      steps:
      - setWeight: 5 # 5% of traffic routed to canary. Alternative: setCanaryScale: {replicas: 1}
      - pause: {duration: 60} # 60 seconds for demo purposes, but in real life it should be much longer (e.g. 1 hour) to collect enough metrics and make sure that the new version is stable
      - setWeight: 100
