manifests/02-argo-rollout/k8s/07-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: myapp
  namespace: 02-rollout-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: myapp:v2 # currently it's v1, but in next steps we will update it to v2
        ports:
        - containerPort: 8000
  strategy:
    canary:
      stableService: myapp-stable
      canaryService: myapp-canary
      trafficRouting:
        istio:
          virtualServices:
          - name: myapp
            routes:
            - primary               # must match the name in VirtualService's http.route.name
      steps:
      - setWeight: 5 # 5% of traffic routed to canary.
      - pause: {duration: 10} # 10 seconds for demo purposes, but in real life it should be much longer (e.g. 1 hour) to collect enough metrics and make sure that the new version is stable
      - setWeight: 100
