manifests/02-argo-rollout/k8s/01-stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-stable
  namespace: 02-rollout-demo
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
  - name: http
    port: 8000
    targetPort: 8000
