manifests/02-argo-rollout/k8s/02-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary
  namespace: 02-rollout-demo
  labels:
    app: myapp  
spec:
  selector:
    app: myapp
  ports:
  - name: http
    port: 8000
    targetPort: 8000
