manifests/02-argo-rollout/k8s/03-main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: 02-rollout-demo
spec:
  selector:
    app: myapp
  ports:
  - name: http
    port: 8000
    targetPort: 8000
