manifests/02-argo-rollout/k8s/04-destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: myapp
  namespace: 02-rollout-demo
spec:
  host: myapp.02-rollout-demo.svc.cluster.local
  subsets:
  - name: stable
    labels:
      app: myapp
  - name: canary
    labels:
      app: myapp
